# cutty

./: .cookiecutter.json  .cruft.json  .flake8  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.rst  LICENSE.rst  README.rst  TODO.md  cutty.json  mypy.ini  noxfile.py  pyproject.toml
.github/: dependabot.yml  pr-labeler.yml
.github/workflows/: constraints.txt  release.yml  tests.yml
docs/: conf.py  index.rst  reference.rst  requirements.txt  usage.rst
src/cutty/: __init__.py  __main__.py  cache.py  compat.py  config.py  context.py  environment.py  errors.py  exceptions.py  extensions.py  find.py  generate.py  git.py  hooks.py  locations.py  prompt.py  render.py  replay.py  tags.py  types.py  utils.py
src/cutty/adapters/click/: __init__.py  binders.py  prompts.py
src/cutty/adapters/disk/: backend.py  files.py  hooks.py
src/cutty/adapters/filesystem/: __init__.py  files.py  filesystem.py  hooks.py
src/cutty/adapters/git/: __init__.py  providers.py
src/cutty/adapters/jinja/: render.py  renderables.py
src/cutty/api/: __init__.py  create.py  engine.py  generate.py  hooks.py  prompt.py  render.py  survey.py  template.py  update.py
src/cutty/application/cookiecutter/: __init__.py  config.py  extensions.py  files.py  filestorage.py  hooks.py  loader.py  main.py  paths.py  prompts.py  render.py  templates.py  variables.py
src/cutty/cli/: create.py  errorhandler.py  logging.py  main.py  update.py
src/cutty/common/: __init__.py  cache.py  config.py  exceptions.py  git.py  tags.py  types.py  utils.py
src/cutty/compat/: contextlib.py
src/cutty/core/: abbreviations.py  application.py  cache.py  compat.py  config.py  engine.py  exceptions.py  extensions.py  generate.py  git.py  hooks.py  project.py  render.py  survey.py  template.py  types.py  utils.py  variables.py  versions.py
src/cutty/create/: console.py  core.py
src/cutty/domain/: binders.py  bindings.py  config.py  files.py  filesystem.py  hooks.py  loader.py  paths.py  prompts.py  render.py  renderables.py  renderfiles.py  services.py  templates.py  variables.py  varspecs.py
src/cutty/entrypoints/cli/: __init__.py  _main.py  cookiecutter.py  create.py  errors.py  import_.py  link.py  update.py
src/cutty/filestorage/: __init__.py
src/cutty/filestorage/adapters/: cookiecutter.py  disk.py  git.py  gitsignature.py  memory.py
src/cutty/filestorage/domain/: files.py  observers.py  storage.py
src/cutty/filesystem/: __init__.py  base.py  dict.py  disk.py  git.py  path.py  pure.py
src/cutty/filesystem/adapters/: dict.py  disk.py  git.py  zip.py
src/cutty/filesystem/domain/: base.py  filesystem.py  path.py
src/cutty/filesystems/: __init__.py
src/cutty/filesystems/adapters/: dict.py  disk.py  git.py  zip.py
src/cutty/filesystems/domain/: filesystem.py  nodefs.py  path.py  pathfs.py  purepath.py
src/cutty/legacy/: __init__.py  context.py  environment.py  exceptions.py  generate.py  hooks.py  prompt.py
src/cutty/legacy/create/: __init__.py  console.py  core.py
src/cutty/legacy/update/: __init__.py  console.py  (+1 more)
src/cutty/plugins/: markers.py  registry.py
src/cutty/projects/: build.py  common.py  config.py  cookiecutter.py  create.py  generate.py  generator.py  link.py  messages.py  project.py  projectconfig.py  repository.py  store.py  template.py  update.py
src/cutty/repositories/: __init__.py
src/cutty/services/: cookiecutter.py  create.py  generate.py  git.py  import_.py  link.py  loadtemplate.py  update.py
src/cutty/update/: console.py  core.py
src/cutty/util/: bus.py  exceptionhandlers.py  git.py  lazysequence.py  peek.py  reraise.py  time.py  typeguard_ignore.py
src/cutty/variables/: __init__.py  binders.py  prompts.py
tests/: __init__.py  conftest.py  test_cache.py  test_git.py  test_main.py  test_tags.py  utils.py
tests/cli/: __init__.py  test_create.py  test_main.py  test_update.py
tests/common/: __init__.py  test_cache.py  test_git.py  test_tags.py
tests/common/utils/: __init__.py  test_as_optional_path.py
tests/core/: __init__.py  test_cache.py  test_git.py  test_versions.py
tests/core/utils/: __init__.py  test_as_optional_path.py
tests/create/: test_main.py
tests/fixtures/: __init__.py  git.py  test_git.py
tests/fixtures/repositories/: __init__.py
tests/functional/: conftest.py  test_cookiecutter.py  test_create.py  test_import.py  test_link.py  test_main.py  test_update.py
tests/legacy/: __init__.py
tests/legacy/create/: __init__.py  test_main.py
tests/legacy/update/: __init__.py  test_console.py
tests/unit/: conftest.py  test_main.py
tests/unit/adapters/: __init__.py
tests/unit/application/: __init__.py
tests/unit/domain/: conftest.py  test_bindings.py  test_files.py  test_filesystem.py  test_hooks.py  test_paths.py  test_prompts.py  test_render.py  test_renderables.py  test_templates.py  test_variables.py  test_varspecs.py
tests/unit/entrypoints/: __init__.py
tests/unit/filestorage/: __init__.py
tests/unit/filesystem/: __init__.py  test_dict.py  test_disk.py  test_pure.py
tests/unit/filesystems/: test_disk.py
tests/unit/plugins/: __init__.py
tests/unit/projects/: __init__.py  conftest.py  test_cookiecutter.py  test_create.py  test_link.py  test_projectconfig.py  test_repository.py  test_update.py
tests/unit/rendering/: __init__.py
tests/unit/repositories/: __init__.py  conftest.py
tests/unit/repositories2/: __init__.py  conftest.py
tests/unit/services/: __init__.py  test_create.py  test_git.py  test_link.py  test_update.py
tests/unit/templates/: __init__.py
tests/unit/util/: __init__.py  test_bus.py  test_exceptionhandlers.py  test_git.py  test_lazysequence.py  test_peek.py  test_reraise.py
tests/unit/variables/: __init__.py  test_binders.py  test_bindings.py  test_prompts.py  test_variables.py
tests/update/: test_console.py  test_main.py
tests/util/: files.py  git.py  keys.py  test_files.py  variables.py
(+244 files in other folders)
