[tool.poetry]
name = "cutty"
version = "0.0.0"
description = "cutty"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/cutty"
repository = "https://github.com/cjolowicz/cutty"
documentation = "https://cutty.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/cutty/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = "^7.0"
Jinja2 = "^2.11.3"
jinja2-time = "^0.2.0"
python-slugify = "^4.0.1"
pygit2 = "^1.5.0"
yarl = "^1.6.3"
appdirs = "^1.4.4"
httpx = "^0.17.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.800"
typeguard = "^2.11.1"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^3.5.1"
sphinx-autobuild = "^2020.9.1"
pre-commit = "^2.10.1"
flake8 = "^3.8.4"
black = "^20.8b1"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^20.11.1"
flake8-docstrings = "^1.5.0"
flake8-rst-docstrings = "^0.0.14"
pep8-naming = "^0.11.1"
darglint = "^1.6.0"
reorder-python-imports = "^2.4.0"
pre-commit-hooks = "^3.4.0"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^2.5.0"
Pygments = "^2.8.0"
hypothesis = "^6.8.2"
pyftpdlib = "^1.5.6"

[tool.poetry.scripts]
cutty = "cutty.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cutty"]

[tool.coverage.report]
show_missing = true
fail_under = 100

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
