[tool.poetry]
name = "cutty"
version = "0.3.0"
description = "cutty"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/cutty"
repository = "https://github.com/cjolowicz/cutty"
documentation = "https://cutty.readthedocs.io"

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/cutty/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = ">=7,<9"
Jinja2 = ">=2.11.3,<4.0.0"
jinja2-time = "^0.2.0"
python-slugify = "^5.0.0"
pygit2 = "^1.5.0"
yarl = "^1.6.3"
appdirs = "^1.4.4"
httpx = "^0.18.1"
binaryornot = "^0.4.4"
pluggy = "^0.13.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
coverage = {extras = ["toml"], version = "^5.4"}
safety = "^1.10.3"
mypy = "^0.812"
typeguard = "^2.12.0"
xdoctest = {extras = ["colors"], version = "^0.15.4"}
sphinx = "^4.0.2"
sphinx-autobuild = "^2021.3.14"
pre-commit = "^2.13.0"
flake8 = "^3.9.2"
black = "^21.5b2"
flake8-bandit = "^2.1.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-rst-docstrings = "^0.2.3"
pep8-naming = "^0.11.1"
darglint = "^1.7.0"
reorder-python-imports = "^2.5.0"
pre-commit-hooks = "^4.0.1"
sphinx-rtd-theme = "^0.5.1"
sphinx-click = "^3.0.0"
Pygments = "^2.9.0"
hypothesis = "^6.13.11"
pyftpdlib = "^1.5.6"

[tool.poetry.scripts]
cutty = "cutty.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cutty"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "@overload",
]
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
