[tool.poetry]
name = "cutty"
version = "0.18.0"
description = "cutty"
authors = ["Claudio Jolowicz <mail@claudiojolowicz.com>"]
license = "MIT"
readme = "README.rst"
homepage = "https://github.com/cjolowicz/cutty"
repository = "https://github.com/cjolowicz/cutty"
documentation = "https://cutty.readthedocs.io"
classifiers = ["Development Status :: 3 - Alpha"]

[tool.poetry.urls]
Changelog = "https://github.com/cjolowicz/cutty/releases"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.1"
Jinja2 = ">=2.11.3,<4.0.0"
jinja2-time = "^0.2.0"
python-slugify = "^5.0.0"
pygit2 = "^1.7.0"
yarl = "^1.6.3"
httpx = ">=0.18.1,<0.22.0"
binaryornot = "^0.4.4"
platformdirs = "^2.0.2"
questionary = "^1.10.0"
prompt-toolkit = "^3.0.22"
Pygments = "^2.10.0"

[tool.poetry.dev-dependencies]
pytest = ">=6.2.5"
coverage = {extras = ["toml"], version = ">=6.2"}
safety = ">=1.10.3"
mypy = ">=0.910"
typeguard = ">=2.13.2"
xdoctest = {extras = ["colors"], version = ">=0.15.10"}
sphinx = ">=4.3.1"
sphinx-autobuild = ">=2021.3.14"
pre-commit = ">=2.16.0"
flake8 = ">=4.0.1"
black = ">=21.11b1"
flake8-bandit = ">=2.1.2"
flake8-bugbear = ">=21.9.2"
flake8-docstrings = ">=1.6.0"
flake8-rst-docstrings = ">=0.2.3"
pep8-naming = ">=0.12.1"
darglint = ">=1.8.0"
reorder-python-imports = ">=2.6.0"
pre-commit-hooks = ">=4.0.1"
sphinx-click = ">=3.0.2"
Pygments = ">=2.10.0"
pyftpdlib = ">=1.5.6"
pytest-sugar = ">=0.9.4"
pyupgrade = ">=2.29.0"
furo = ">=2021.11.12"
isort = "^5.10.1"

[tool.poetry.scripts]
cutty = "cutty.__main__:main"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["cutty", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 100
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "pytest.skip",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:no type annotations present -- not typechecking .*",
    "ignore:no code associated -- not typechecking .*",
]

[tool.isort]
profile = "black"
force_single_line = true
order_by_type = false

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "binaryornot.*",
    "jinja2_time",
    "pyftpdlib.*",
    "pygit2.*",
    "pygments.*",
]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
